#190 #191 KSP-generated accessors — ReactiveProperty + raw bulk-load initializer